# Git-for-Research

./: .gitignore  DEMO_GUIDE.md
backend/: API_CONTRACT.md  DEVELOPMENT.md  FRONTEND_BACKEND_CONTRACT.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260502_01_initial_schema.py  20260502_02_meetings_and_tasks.py  20260504_01_branch_dag_parents.py  20260507_01_line_node_graph.py
backend/scripts/: install_backend.cmd  run_tests.cmd  seed_demo_data.py
backend/src/gfr_backend/: __init__.py  main.py
backend/src/gfr_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/gfr_backend/api/: dependencies.py  errors.py  router.py
backend/src/gfr_backend/api/routes/: branches.py  health.py  lines.py  meetings.py  nodes.py  projects.py  qa.py  updates.py
backend/src/gfr_backend/core/: config.py
backend/src/gfr_backend/db/: base.py  session.py
backend/src/gfr_backend/db/models/: __init__.py  branch.py  line.py  meeting.py  meeting_task.py  node.py  project.py  team.py  update.py  user.py
backend/src/gfr_backend/schemas/: branches.py  lines.py  meetings.py  nodes.py  projects.py  qa.py  updates.py
backend/src/gfr_backend/services/: branches.py  lines.py  llm.py  meetings.py  nodes.py  projects.py  qa.py  retriever.py  updates.py
backend/tests/: conftest.py  test_app.py  test_branches.py  test_e2e_graph_flow.py  test_e2e_mvp.py  test_errors.py  test_meetings.py  test_nodes.py  test_projects.py  test_projects_lines.py  test_qa.py  test_updates.py  test_validation.py
docs/: plan.md  (+1 more)
(+55 files in other folders)
